# academyruins-api

./: .env_EXAMPLE  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  create_cr_and_diff.py  create_mtr_and_diff.py  devstart.py  docker-compose.yml  extract_cr.py  generate_forced_matches.py  main.py  mtgdoc.html  pyproject.toml  refresh_cr.py  requirements.txt  schema.sql  update_schema.sh
.github/: FUNDING.yml
.github/workflows/: actions.yml  pull_requests.yml  release.yml
alembic/: env.py
alembic/versions/: 096084611e96_add_parsed_ipg.py  0bc6715a73fd_add_pending_mtr.py  0cb715a5aac5_initial_autogen.py  1d9095f58579_remove_diff_structures.py  2839ae5907d0_add_mtr_effective_date.py  40ed282ffb46_add_mtr_data.py  496edfc212b3_add_cr_diff_items.py  63d295d21692_mtr_diff.py  c4db41b6319c_moved_cr.py  f81d76ccde31_cr_toc.py
app/: .env_EXAMPLE  cr_scraper.py  extract_cr.py  main.py  notifier.py  redirects.py  refresh_cr.py  scheduler.py  static_paths.py
app/database/: db.py  models.py  operations.py
app/difftool/: diffmaker.py  diffsorter.py  itemdiffer.py  matcher.py
app/openapi/: no422.py  openapi_decorators.py  strings.py
app/parsing/: cr_scraper.py  docs_scraper.py  extract_cr.py  formatter.py  keyword_def.py  refresh_cr.py  refresh_docs.py
app/resources/: cache.py  seeder.py  static_paths.py  unofficial-glossary.json
app/routers/: admin.py  diff.py  glossary.py  glossary_deprecated.py  link.py  metadata.py  mtr.py  pending.py  rawfile.py  rule.py  rule_deprecated.py  unofficial_glossary.py  unofficial_glossary_deprecated.py
app/static/: unofficial-glossary.json
app/utils/: BipartiteGraph.py  backup.py  db.py  docs.py  keyword_def.py  logger.py  models.py  notifier.py  remove422.py  response_models.py  responses.py  scheduler.py  trace.py
src/: main.py  models.py  schemas.py
src/admin/: router.py  service.py
src/cli_scripts/: create_cr_and_diff.py  create_mtr_and_diff.py  run.py
src/cr/: keyword_def.py  models.py  router.py  schemas.py  service.py  utils.py
src/database/: db.py  operations.py
src/diffs/: models.py  router.py  schemas.py  service.py
src/difftool/: diffmaker.py  itemdiffer.py  matcher.py
src/ipg/: models.py  router.py  schemas.py  service.py
src/link/: models.py  router.py  service.py
src/links/: router.py  service.py
src/mtr/: models.py  router.py  schemas.py  service.py
src/openapi/: openapi_decorators.py  strings.py
src/parsing/: cr_scraper.py  docs_scraper.py
src/resources/: cache.py  seeder.py  static_paths.py
src/routers/: admin.py  diff.py  link.py  metadata.py  mtr.py  pending.py  rawfile.py  rule.py  rule_deprecated.py  (+1 more)
src/scraper/: cr_scraper.py  (+1 more)
(+39 files in other folders)
